read invite from url & check
